--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: docker:19
+image: de.icr.io/lgln/kube-tools:latest
 
 services:
   - docker:19-dind
@@ -20,12 +20,12 @@ cache: &global_cache
 install:
   stage: init
   image: node:lts-alpine
+  interruptible: true
   needs: []
   dependencies: []
   cache:
     <<: *global_cache
   script:
-    # install node modules
     - cd power
     - npm ci
     - node_modules/.bin/ngcc --tsconfig ./src/tsconfig.app.json -p es2015
@@ -38,17 +38,18 @@ install:
 
 init:helm-dev:
   stage: init
-  image: de.icr.io/lgln/kube-tools:latest
+  interruptible: true
   needs: []
   dependencies: []
   cache: {}
-  artifacts:
-    name: "manifest"
-    expire_in: 2 days
-    paths:
-      - manifest-dev
   script:
     - helm template power ./chart/power -f ./chart/power/values-dev.yaml --dependency-update --output-dir manifest-dev
+  artifacts:
+    name: "manifest"
+    expire_in: 2 hrs
+    public: false
+    paths:
+      - manifest-dev
   only:
     - merge_requests
     - tags
@@ -56,55 +57,59 @@ init:helm-dev:
 
 init:helm-staging:
   stage: init
-  image: de.icr.io/lgln/kube-tools:latest
+  interruptible: true
   needs: []
   dependencies: []
   cache: {}
-  artifacts:
-    name: "manifest"
-    expire_in: 2 days
-    paths:
-      - manifest-staging
   script:
     - helm template power ./chart/power -f ./chart/power/values-staging.yaml --dependency-update --output-dir manifest-staging
+  artifacts:
+    name: "manifest"
+    expire_in: 2 hrs
+    public: false
+    paths:
+      - manifest-staging
   only:
     - staging
 
 init:helm-production:
   stage: init
-  image: de.icr.io/lgln/kube-tools:latest
+  interruptible: true
   needs: []
   dependencies: []
   cache: {}
-  artifacts:
-    name: "manifest"
-    expire_in: 2 days
-    paths:
-      - manifest-production
   script:
     - helm template power ./chart/power -f ./chart/power/values-production.yaml --dependency-update --output-dir manifest-production
+  artifacts:
+    name: "manifest"
+    expire_in: 2 hrs
+    public: false
+    paths:
+      - manifest-production
   only:
     - production
 
 test:karma:
   stage: test
   image: trion/ng-cli-karma:latest
-  needs: ["install"]
+  interruptible: true
+  needs:
+    - job: install
+      artifacts: false
   dependencies: []
   cache:
     <<: *global_cache
     policy: pull
+  script:
+    - cd power
+    - node_modules/@angular/cli/bin/ng test --browsers ChromeHeadlessNoSandbox --progress false --watch false --code-coverage
   artifacts:
-    expire_in: 2 weeks
+    expire_in: 2 days
+    public: false
     reports:
       junit: power/output/junit_karma.xml
     paths:
       - power/output/junit_karma.xml
-  coverage: '/Lines \W+: (\d+\.\d+)%.*/'
-  script:
-    # Run Karma tests
-    - cd power
-    - node_modules/@angular/cli/bin/ng test --browsers ChromeHeadlessNoSandbox --progress false --watch false --code-coverage
   only:
     - merge_requests
     - tags
@@ -115,21 +120,24 @@ test:karma:
 test:e2e:
   stage: test
   image: trion/ng-cli-e2e:latest
-  needs: ["install"]
+  interruptible: true
+  needs:
+    - job: install
+      artifacts: false
   dependencies: []
   cache:
     <<: *global_cache
     policy: pull
+  script:
+    - cd power
+    - node_modules/@angular/cli/bin/ng e2e --protractor-config e2e/protractor-ci.conf.js
   artifacts:
-    expire_in: 2 weeks
+    expire_in: 2 days
+    public: false
     reports:
       junit: power/output/junit_e2e.xml
     paths:
       - power/output/junit_e2e.xml
-  script:
-    # Run E2E tests
-    - cd power
-    - node_modules/@angular/cli/bin/ng e2e --protractor-config e2e/protractor-ci.conf.js
   only:
     - merge_requests
     - tags
@@ -141,6 +149,7 @@ test:e2e:
 test:audit:
   stage: test
   image: node:lts-alpine
+  interruptible: true
   needs: []
   dependencies: []
   cache: {}
@@ -158,7 +167,10 @@ test:audit:
 test:lint:
   stage: test
   image: node:lts-alpine
-  needs: ["install"]
+  interruptible: true
+  needs:
+    - job: install
+      artifacts: false
   dependencies: []
   cache:
     <<: *global_cache
@@ -176,7 +188,10 @@ test:lint:
 test:lint-html:
   stage: test
   image: node:lts-alpine
-  needs: ["install"]
+  interruptible: true
+  needs:
+    - job: install
+      artifacts: false
   dependencies: []
   cache:
     <<: *global_cache
@@ -194,7 +209,10 @@ test:lint-html:
 test:lint-styles:
   stage: test
   image: node:lts-alpine
-  needs: ["install"]
+  interruptible: true
+  needs:
+    - job: install
+      artifacts: false
   dependencies: []
   cache:
     <<: *global_cache
@@ -211,15 +229,16 @@ test:lint-styles:
 
 test:helm-dry-run:
   stage: test
-  image: de.icr.io/lgln/kube-tools:latest
+  interruptible: true
   needs: []
   dependencies: []
   cache: {}
-  script:
+  before_script:
     - kubectl config set-cluster k8s --server="$KUBE_API_URL" --insecure-skip-tls-verify=true
     - kubectl config set-credentials "$KUBE_DEPLOY_SECRET_NAME" --token="$KUBE_API_TOKEN"
     - kubectl config set-context default --cluster=k8s --user="$KUBE_DEPLOY_SECRET_NAME"
     - kubectl config use-context default
+  script:
     - helm upgrade power ./chart/power -n dev -f ./chart/power/values-dev.yaml --install --set=image.tag="$CI_COMMIT_SHORT_SHA" --dry-run
   only:
     - dev
@@ -228,8 +247,10 @@ test:helm-dry-run:
 
 test:kubesec-dev:
   stage: test
-  image: de.icr.io/lgln/kube-tools:latest
-  needs: ["init:helm-dev"]
+  interruptible: true
+  needs:
+    - job: init:helm-dev
+      artifacts: true
   dependencies:
     - init:helm-dev
   cache: {}
@@ -243,8 +264,10 @@ test:kubesec-dev:
 
 test:kubesec-staging:
   stage: test
-  image: de.icr.io/lgln/kube-tools:latest
-  needs: ["init:helm-staging"]
+  interruptible: true
+  needs:
+    - job: init:helm-staging
+      artifacts: true
   dependencies:
     - init:helm-staging
   cache: {}
@@ -256,8 +279,10 @@ test:kubesec-staging:
 
 test:kubesec-production:
   stage: test
-  image: de.icr.io/lgln/kube-tools:latest
-  needs: ["init:helm-production"]
+  interruptible: true
+  needs:
+    - job: init:helm-production
+      artifacts: true
   dependencies:
     - init:helm-production
   cache: {}
@@ -269,8 +294,10 @@ test:kubesec-production:
 
 test:kube-linter-dev:
   stage: test
-  image: de.icr.io/lgln/kube-tools:latest
-  needs: ["init:helm-dev"]
+  interruptible: true
+  needs:
+    - job: init:helm-dev
+      artifacts: true
   dependencies:
     - init:helm-dev
   cache: {}
@@ -283,8 +310,10 @@ test:kube-linter-dev:
 
 test:kube-linter-staging:
   stage: test
-  image: de.icr.io/lgln/kube-tools:latest
-  needs: ["init:helm-staging"]
+  interruptible: true
+  needs:
+    - job: init:helm-staging
+      artifacts: true
   dependencies:
     - init:helm-staging
   cache: {}
@@ -295,8 +324,10 @@ test:kube-linter-staging:
 
 test:kube-linter-production:
   stage: test
-  image: de.icr.io/lgln/kube-tools:latest
-  needs: ["init:helm-production"]
+  interruptible: true
+  needs:
+    - job: init:helm-production
+      artifacts: true
   dependencies:
     - init:helm-production
   cache: {}
@@ -308,7 +339,10 @@ test:kube-linter-production:
 build:
   stage: build
   image: node:lts-alpine
-  needs: ["install"]
+  interruptible: true
+  needs:
+    - job: install
+      artifacts: false
   dependencies: []
   cache:
     <<: *global_cache
@@ -319,6 +353,7 @@ build:
   artifacts:
     name: "compiled dist"
     expire_in: 2 days
+    public: false
     paths:
       - power/dist/power
   only:
@@ -330,7 +365,10 @@ build:
 build:production:
   stage: build
   image: node:lts-alpine
-  needs: ["install"]
+  interruptible: true
+  needs:
+    - job: install
+      artifacts: false
   dependencies: []
   cache:
     <<: *global_cache
@@ -341,6 +379,7 @@ build:production:
   artifacts:
     name: "compiled dist"
     expire_in: 2 days
+    public: false
     paths:
       - power/dist/power
   only:
@@ -348,13 +387,14 @@ build:production:
 
 package:development:
   stage: package
-  image: de.icr.io/lgln/kube-tools:latest
+  interruptible: false
   dependencies:
     - build
   cache: {}
-  script:
+  before_script:
     - i=0; while [ "$i" -lt 12 ]; do docker info &> /dev/null && break; sleep 5; i=$(( i + 1 )) ; done
     - echo "$CI_REGISTRY_PASSWORD" | docker login --username "$CI_REGISTRY_USER" --password-stdin $CI_REGISTRY
+  script:
     - docker build --pull -t "$CI_REGISTRY_IMAGE:latest" --build-arg=COMMIT="$CI_COMMIT_SHORT_SHA" --build-arg=BRANCH="$CI_COMMIT_REF_NAME" .
     - docker push "$CI_REGISTRY_IMAGE:latest"
   only:
@@ -362,14 +402,17 @@ package:development:
 
 package:staging:
   stage: package
-  image: de.icr.io/lgln/kube-tools:latest
+  interruptible: false
   dependencies:
     - build
   cache: {}
-  environment: { name: staging }
-  script:
+  environment:
+    name: staging
+    action: prepare
+  before_script:
     - i=0; while [ "$i" -lt 12 ]; do docker info &> /dev/null && break; sleep 5; i=$(( i + 1 )) ; done
     - echo "$CI_REGISTRY_PASSWORD" | docker login --username "$CI_REGISTRY_USER" --password-stdin $CI_REGISTRY
+  script:
     - docker build --pull -t "$CI_REGISTRY_IMAGE:staging" --build-arg=COMMIT="$CI_COMMIT_SHORT_SHA" --build-arg=BRANCH="$CI_COMMIT_REF_NAME" .
     - docker push "$CI_REGISTRY_IMAGE:staging"
   only:
@@ -377,14 +420,17 @@ package:staging:
 
 package:production:
   stage: package
-  image: de.icr.io/lgln/kube-tools:latest
+  interruptible: false
   dependencies:
     - build:production
   cache: {}
-  environment: { name: production }
-  script:
+  environment:
+    name: production
+    action: prepare
+  before_script:
     - i=0; while [ "$i" -lt 12 ]; do docker info &> /dev/null && break; sleep 5; i=$(( i + 1 )) ; done
     - echo "$CI_REGISTRY_PASSWORD" | docker login --username "$CI_REGISTRY_USER" --password-stdin $CI_REGISTRY
+  script:
     - docker build --pull -t "$CI_REGISTRY_IMAGE:production" --build-arg=COMMIT="$CI_COMMIT_SHORT_SHA" --build-arg=BRANCH="$CI_COMMIT_REF_NAME" .
     - docker push "$CI_REGISTRY_IMAGE:production"
   only:
@@ -393,13 +439,16 @@ package:production:
 
 scan:development:
   stage: scan
-  image: de.icr.io/lgln/kube-tools:latest
-  needs: ["package:development"]
+  interruptible: false
+  needs:
+    - job: package:development
+      artifacts: false
   dependencies: []
   cache: {}
-  script:
+  before_script:
     - i=0; while [ "$i" -lt 12 ]; do docker info &> /dev/null && break; sleep 5; i=$(( i + 1 )) ; done
     - echo "$CI_REGISTRY_PASSWORD" | docker login --username "$CI_REGISTRY_USER" --password-stdin $CI_REGISTRY
+  script:
     - docker pull "$CI_REGISTRY_IMAGE:latest"
     - trivy image --no-progress --exit-code 1 "$CI_REGISTRY_IMAGE:latest"
   only:
@@ -408,14 +457,19 @@ scan:development:
 
 scan:staging:
   stage: scan
-  image: de.icr.io/lgln/kube-tools:latest
-  needs: ["package:staging"]
+  interruptible: false
+  needs:
+    - job: package:staging
+      artifacts: false
   dependencies: []
   cache: {}
-  environment: { name: staging }
-  script:
+  environment:
+    name: staging
+    action: prepare
+  before_script:
     - i=0; while [ "$i" -lt 12 ]; do docker info &> /dev/null && break; sleep 5; i=$(( i + 1 )) ; done
     - echo "$CI_REGISTRY_PASSWORD" | docker login --username "$CI_REGISTRY_USER" --password-stdin $CI_REGISTRY
+  script:
     - docker pull "$CI_REGISTRY_IMAGE:staging"
     - trivy image --no-progress --exit-code 1 "$CI_REGISTRY_IMAGE:staging"
   only:
@@ -424,32 +478,39 @@ scan:staging:
 
 scan:production:
   stage: scan
-  image: de.icr.io/lgln/kube-tools:latest
-  needs: ["package:production"]
+  interruptible: false
+  needs:
+    - job: package:production
+      artifacts: false
   dependencies: []
   cache: {}
-  environment: { name: production }
-  script:
+  environment:
+    name: production
+    action: prepare
+  before_script:
     - i=0; while [ "$i" -lt 12 ]; do docker info &> /dev/null && break; sleep 5; i=$(( i + 1 )) ; done
     - echo "$CI_REGISTRY_PASSWORD" | docker login --username "$CI_REGISTRY_USER" --password-stdin $CI_REGISTRY
+  script:
     - docker pull "$CI_REGISTRY_IMAGE:production"
     - trivy image --no-progress --exit-code 1 "$CI_REGISTRY_IMAGE:production"
   only:
     - production
-  when: manual
   allow_failure: true
 
 deploy:development:
   stage: deploy
-  image: de.icr.io/lgln/kube-tools:latest
-  needs: ["package:development"]
+  interruptible: false
+  needs:
+    - job: package:development
+      artifacts: false
   dependencies: []
   cache: {}
-  script:
+  before_script:
     - kubectl config set-cluster k8s --server="$KUBE_API_URL" --insecure-skip-tls-verify=true
     - kubectl config set-credentials "$KUBE_DEPLOY_SECRET_NAME" --token="$KUBE_API_TOKEN"
     - kubectl config set-context default --cluster=k8s --user="$KUBE_DEPLOY_SECRET_NAME"
     - kubectl config use-context default
+  script:
     - helm upgrade power ./chart/power -n dev -f ./chart/power/values-dev.yaml --install
       --set labels.commit="$CI_COMMIT_SHORT_SHA"
   only:
@@ -457,16 +518,21 @@ deploy:development:
 
 deploy:staging:
   stage: deploy
-  image: de.icr.io/lgln/kube-tools:latest
-  needs: ["package:staging"]
+  interruptible: false
+  needs:
+    - job: package:staging
+      artifacts: false
   dependencies: []
   cache: {}
-  environment: { name: staging }
-  script:
+  environment:
+    name: staging
+    action: start
+  before_script:
     - kubectl config set-cluster k8s --server="$KUBE_API_URL" --insecure-skip-tls-verify=true
     - kubectl config set-credentials "$KUBE_DEPLOY_SECRET_NAME" --token="$KUBE_API_TOKEN"
     - kubectl config set-context default --cluster=k8s --user="$KUBE_DEPLOY_SECRET_NAME"
     - kubectl config use-context default
+  script:
     - helm upgrade power ./chart/power -n staging -f ./chart/power/values-staging.yaml --install
       --set labels.commit="$CI_COMMIT_SHORT_SHA"
   only:
@@ -474,16 +540,21 @@ deploy:staging:
 
 deploy:production:
   stage: deploy
-  image: de.icr.io/lgln/kube-tools:latest
-  needs: ["package:production"]
+  interruptible: false
+  needs:
+    - job: package:production
+      artifacts: false
   dependencies: []
   cache: {}
-  environment: { name: production }
-  script:
+  environment:
+    name: production
+    action: start
+  before_script:
     - kubectl config set-cluster k8s --server="$KUBE_API_URL" --insecure-skip-tls-verify=true
     - kubectl config set-credentials "$KUBE_DEPLOY_SECRET_NAME" --token="$KUBE_API_TOKEN"
     - kubectl config set-context default --cluster=k8s --user="$KUBE_DEPLOY_SECRET_NAME"
     - kubectl config use-context default
+  script:
     - helm upgrade power ./chart/power -n prod -f ./chart/power/values-production.yaml --install
       --set labels.commit="$CI_COMMIT_SHORT_SHA"
   only:
