GMB: Change Link for GMB and LMB

--- a/power/src/assets/config/config.json
+++ b/power/src/assets/config/config.json
@@ -6,6 +6,7 @@
         "immobilienpreiskalkulator",
         "grundstuecksmarktberichte",
         "landesgrundstuecksmarktdaten",
+        "landesgrundstuecksmarktberichte",
         "gmb",
         "forms",
         "feedback",
