Updated module list

--- a/chart/power/values-production.yaml
+++ b/chart/power/values-production.yaml
@@ -36,7 +36,6 @@ securityContext:
   # runAsNonRoot: true
   # runAsUser: 1000
 
-
 service:
   type: ClusterIP
   port: 80
@@ -91,5 +90,6 @@ config:
     - "immobilienpreiskalkulator"
     - "grundstuecksmarktberichte"
     - "landesgrundstuecksmarktdaten"
+    - "landesgrundstuecksmarktberichte"
     - "feedback"
   authentication: true
