--- a/chart/power/values-staging.yaml
+++ b/chart/power/values-staging.yaml
@@ -36,7 +36,6 @@ securityContext:
   # runAsNonRoot: true
   # runAsUser: 1000
 
-
 service:
   type: ClusterIP
   port: 80
@@ -92,7 +91,7 @@ config:
     - "immobilienpreiskalkulator"
     - "grundstuecksmarktberichte"
     - "landesgrundstuecksmarktdaten"
-    - "gmb"
+    - "landesgrundstuecksmarktberichte"
     - "forms"
     - "feedback"
     - "login"
