--- a/nginx-default.conf
+++ b/nginx-default.conf
@@ -43,30 +43,44 @@ server {
   location /geocoding/suggestions/ {
     rewrite ^\/geocoding\/suggestions\/(.*) /gdz_geokodierung__${BKG_GEOCODING_SECRET}/suggest$1 break;
     proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_ssl_server_name on;
+    proxy_intercept_errors on;
     proxy_pass https://sg.geodatenzentrum.de/;
-    return 404;
+    return 504;
   }
 
   location /geocoding/geosearch/ {
     rewrite ^\/geocoding\/geosearch\/(.*) /gdz_ortssuche__${BKG_GEOCODING_SECRET}/geosearch.json$1 break;
     proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_ssl_server_name on;
+    proxy_intercept_errors on;
     proxy_pass https://sg.geodatenzentrum.de/;
-    return 404;
+    return 504;
   }
 
   location /feedback-rss/ {
     rewrite ^\/feedback-rss\/(.*) /Kay-LGLN/power/-/issues.atom break;
     proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_ssl_server_name on;
+    proxy_intercept_errors on;
     proxy_pass https://gitlab.com/;
-    return 404;
+    return 504;
   }
 
   location /boris-print/ {
     rewrite ^\/boris-print\/(.*) /ent-boris/brwdirect$1 break;
     proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_ssl_server_name on;
+    proxy_intercept_errors on;
     proxy_pass https://www.boris.niedersachsen.de/;
-    return 404;
+    return 504;
   }
 }
