--- a/nginx-default.conf
+++ b/nginx-default.conf
@@ -3,14 +3,18 @@
 server {
   listen  80;
   root /usr/share/nginx/html;
-  server_tokens off;
+  error_log /var/log/nginx/error.log error;
+
+  # compression
   gzip on;
   gzip_static on;
   gzip_types application/javascript application/json application/octet-stream image/x-icon text/css text/html;
 
-  error_log /var/log/nginx/error.log error;
-
   # security headers
+  server_tokens off;
+  proxy_redirect off;
+  proxy_ssl_server_name on;
+  proxy_intercept_errors on;
   proxy_cookie_path / "/; HTTPOnly; Secure";
   add_header Strict-Transport-Security "max-age=31536000; includeSubdomains;" always;
   add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-eval'; worker-src 'self' blob:; child-src 'self' blob:; style-src 'unsafe-inline' 'self'; img-src 'self' https: data:; object-src 'none'; connect-src *;" always;
@@ -26,6 +30,7 @@ server {
   add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
   add_header Pragma 'no-cache';
   expires 0;
+  etag off;
 
   location / {
     try_files $uri $uri/ /index.html;
@@ -45,10 +50,8 @@ server {
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-Proto $scheme;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_ssl_server_name on;
-    proxy_intercept_errors on;
     proxy_pass https://sg.geodatenzentrum.de/;
-    return 504;
+    error_page 400 401 403 404 405 500 501 502 503 504 505 /index.html;
   }
 
   location /geocoding/geosearch/ {
@@ -56,10 +59,8 @@ server {
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-Proto $scheme;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_ssl_server_name on;
-    proxy_intercept_errors on;
     proxy_pass https://sg.geodatenzentrum.de/;
-    return 504;
+    error_page 400 401 403 404 405 500 501 502 503 504 505 /index.html;
   }
 
   location /feedback-rss/ {
@@ -67,10 +68,8 @@ server {
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-Proto $scheme;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_ssl_server_name on;
-    proxy_intercept_errors on;
     proxy_pass https://gitlab.com/;
-    return 504;
+    error_page 400 401 403 404 405 500 501 502 503 504 505 /index.html;
   }
 
   location /boris-print/ {
@@ -78,9 +77,7 @@ server {
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-Proto $scheme;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_ssl_server_name on;
-    proxy_intercept_errors on;
     proxy_pass https://www.boris.niedersachsen.de/;
-    return 504;
+    error_page 400 401 403 404 405 500 501 502 503 504 505 /index.html;
   }
 }
