--- a/nginx-default.conf
+++ b/nginx-default.conf
@@ -73,7 +73,7 @@ server {
   }
 
   location /boris-print/ {
-    rewrite ^\/boris-print\/(.*) /ent-boris/brwdirect$1 break;
+    rewrite ^\/boris-print\/(.*) /boris/brwdirect$1 break;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-Proto $scheme;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
