Updated ingress configuration

--- a/chart/power/values-production.yaml
+++ b/chart/power/values-production.yaml
@@ -47,7 +47,7 @@ ingress:
     konghq.com/override: power-https-redirect
     konghq.com/plugins: power-rate-limiting-by-ip,power-cors
   hosts:
-    - host: prod.power-production-65655d4c73bf47a3300821aa2939abf4-0000.eu-de.containers.appdomain.cloud
+    - host: prod.power-production-65655d4c73bf47a3300821aa2939abf4-0001.eu-de.containers.appdomain.cloud
       paths:
         - path: /
           serviceName: power
@@ -57,13 +57,27 @@ ingress:
         - path: /
           serviceName: power
           servicePort: 80
+    - host: immobilienmarkt.niedersachsen.de
+      paths:
+        - path: /
+          serviceName: power
+          servicePort: 80
+    - host: www.immobilienmarkt.niedersachsen.de
+      paths:
+        - path: /
+          serviceName: power
+          servicePort: 80
   tls:
-    - secretName: power-production-65655d4c73bf47a3300821aa2939abf4-0000
+    - secretName: power-production-65655d4c73bf47a3300821aa2939abf4-0001
       hosts:
-        - prod.power-production-65655d4c73bf47a3300821aa2939abf4-0000.eu-de.containers.appdomain.cloud
+        - prod.power-production-65655d4c73bf47a3300821aa2939abf4-0001.eu-de.containers.appdomain.cloud
     - secretName: sub-lgln-niedersachsen-de
       hosts:
         - power.lgln.niedersachsen.de
+    - secretName: immobilienmarkt-niedersachsen-de
+      hosts:
+        - immobilienmarkt.niedersachsen.de
+        - www.immobilienmarkt.niedersachsen.de
 
 resources:
   # We usually recommend not to specify default resources and to leave this as a conscious
