--- a/nginx-default.conf
+++ b/nginx-default.conf
@@ -26,11 +26,11 @@ server {
   add_header X-Frame-Options "DENY" always;
   add_header X-XSS-Protection "1; mode=block" always;
 
-  # disable cache
-  add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
-  add_header Pragma 'no-cache';
-  expires 0;
-  etag off;
+  # enable cache
+  add_header Cache-Control 'public, must-revalidate, proxy-revalidate';
+  add_header Pragma 'public';
+  expires 30d;
+  etag on;
 
   location / {
     try_files $uri $uri/ /index.html;
