--- a/power/package.json
+++ b/power/package.json
@@ -54,7 +54,7 @@
         "sass": "^1.32.8",
         "semver": "^7.3.4",
         "showdown": "^1.9.1",
-        "survey-angular": "^1.8.33",
+        "survey-angular": "1.8.31",
         "tslib": "^2.1.0",
         "web-animations-js": "^2.3.2",
         "zone.js": "^0.11.4"
