--- a/nginx-default.conf
+++ b/nginx-default.conf
@@ -10,26 +10,6 @@ server {
   gzip_static on;
   gzip_types application/javascript application/json application/octet-stream image/x-icon text/css text/html;
 
-  # reverse proxy settings
-  proxy_redirect off;
-  proxy_ssl_server_name on;
-  proxy_intercept_errors on;
-  proxy_set_header X-Real-IP $remote_addr;
-  proxy_set_header X-Forwarded-Proto $scheme;
-  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-  proxy_hide_header Set-Cookie;
-  proxy_hide_header Cache-Control;
-  proxy_hide_header Pragma;
-  proxy_hide_header Strict-Transport-Security;
-  proxy_hide_header Content-Security-Policy;
-  proxy_hide_header X-Content-Type-Options;
-  proxy_hide_header Access-Control-Allow-Origin;
-  proxy_hide_header Referrer-Policy;
-  proxy_hide_header Expect-CT;
-  proxy_hide_header Permissions-Policy;
-  proxy_hide_header X-Frame-Options;
-  proxy_hide_header X-XSS-Protection;
-
   # security settings
   server_tokens off;
   proxy_cookie_path / "/; HTTPOnly; Secure";
@@ -64,14 +44,55 @@ server {
 
   location /geocoding/geosearch/ {
     rewrite ^\/geocoding\/geosearch\/(.*) /gdz_ortssuche__${BKG_GEOCODING_SECRET}/geosearch.json$1 break;
+    proxy_pass https://sg.geodatenzentrum.de/;
+
+    proxy_redirect off;
+    proxy_ssl_server_name on;
+    proxy_intercept_errors on;
+    proxy_set_header Cookie "";
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_hide_header Set-Cookie;
+    proxy_hide_header Cache-Control;
+    proxy_hide_header Pragma;
+    proxy_hide_header Strict-Transport-Security;
+    proxy_hide_header Content-Security-Policy;
+    proxy_hide_header X-Content-Type-Options;
+    proxy_hide_header Access-Control-Allow-Origin;
+    proxy_hide_header Referrer-Policy;
+    proxy_hide_header Expect-CT;
+    proxy_hide_header Permissions-Policy;
+    proxy_hide_header X-Frame-Options;
+    proxy_hide_header X-XSS-Protection;
     proxy_hide_header gdz-geocode-statistic;
     proxy_hide_header gdz-geocode-statistic-total;
-    proxy_pass https://sg.geodatenzentrum.de/;
     error_page 400 401 403 404 405 500 501 502 503 504 505 /index.html;
   }
 
   location /feedback-rss/ {
     rewrite ^\/feedback-rss\/(.*) /Kay-LGLN/power/-/issues.atom break;
+    proxy_pass https://gitlab.com/;
+
+    proxy_redirect off;
+    proxy_ssl_server_name on;
+    proxy_intercept_errors on;
+    proxy_set_header Cookie "";
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_hide_header Set-Cookie;
+    proxy_hide_header Cache-Control;
+    proxy_hide_header Pragma;
+    proxy_hide_header Strict-Transport-Security;
+    proxy_hide_header Content-Security-Policy;
+    proxy_hide_header X-Content-Type-Options;
+    proxy_hide_header Access-Control-Allow-Origin;
+    proxy_hide_header Referrer-Policy;
+    proxy_hide_header Expect-CT;
+    proxy_hide_header Permissions-Policy;
+    proxy_hide_header X-Frame-Options;
+    proxy_hide_header X-XSS-Protection;
     proxy_hide_header cf-cache-status;
     proxy_hide_header cf-ray;
     proxy_hide_header cf-request-id;
@@ -81,13 +102,32 @@ server {
     proxy_hide_header x-gitlab-feature-category;
     proxy_hide_header x-request-id;
     proxy_hide_header x-runtime;
-    proxy_pass https://gitlab.com/;
     error_page 400 401 403 404 405 500 501 502 503 504 505 /index.html;
   }
 
   location /boris-print/ {
     rewrite ^\/boris-print\/(.*) /boris/brwdirect$1 break;
     proxy_pass https://www.boris.niedersachsen.de/;
+
+    proxy_redirect off;
+    proxy_ssl_server_name on;
+    proxy_intercept_errors on;
+    proxy_set_header Cookie "";
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_hide_header Set-Cookie;
+    proxy_hide_header Cache-Control;
+    proxy_hide_header Pragma;
+    proxy_hide_header Strict-Transport-Security;
+    proxy_hide_header Content-Security-Policy;
+    proxy_hide_header X-Content-Type-Options;
+    proxy_hide_header Access-Control-Allow-Origin;
+    proxy_hide_header Referrer-Policy;
+    proxy_hide_header Expect-CT;
+    proxy_hide_header Permissions-Policy;
+    proxy_hide_header X-Frame-Options;
+    proxy_hide_header X-XSS-Protection;
     error_page 400 401 403 404 405 500 501 502 503 504 505 /index.html;
   }
 }
