--- a/nginx-default.conf
+++ b/nginx-default.conf
@@ -54,8 +54,11 @@ server {
     proxy_set_header X-Forwarded-Proto $scheme;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_hide_header Set-Cookie;
+    proxy_hide_header Server;
     proxy_hide_header Cache-Control;
     proxy_hide_header Pragma;
+    proxy_hide_header expires;
+    proxy_hide_header etag;
     proxy_hide_header Strict-Transport-Security;
     proxy_hide_header Content-Security-Policy;
     proxy_hide_header X-Content-Type-Options;
@@ -82,8 +85,11 @@ server {
     proxy_set_header X-Forwarded-Proto $scheme;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_hide_header Set-Cookie;
+    proxy_hide_header Server;
     proxy_hide_header Cache-Control;
     proxy_hide_header Pragma;
+    proxy_hide_header expires;
+    proxy_hide_header etag;
     proxy_hide_header Strict-Transport-Security;
     proxy_hide_header Content-Security-Policy;
     proxy_hide_header X-Content-Type-Options;
@@ -117,8 +123,11 @@ server {
     proxy_set_header X-Forwarded-Proto $scheme;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_hide_header Set-Cookie;
+    proxy_hide_header Server;
     proxy_hide_header Cache-Control;
     proxy_hide_header Pragma;
+    proxy_hide_header expires;
+    proxy_hide_header etag;
     proxy_hide_header Strict-Transport-Security;
     proxy_hide_header Content-Security-Policy;
     proxy_hide_header X-Content-Type-Options;
