--- a/power/package.json
+++ b/power/package.json
@@ -14,7 +14,7 @@
         "e2e": "ng e2e",
         "dev:ssr": "ng run power:serve-ssr",
         "serve:ssr": "node dist/power/server/de/main.js",
-        "build:ssr": "ng build --prod && ng run power:server:production",
+        "build:ssr": "ng build -c production && ng run power:server:production",
         "prerender": "ng run power:prerender"
     },
     "private": true,
@@ -40,7 +40,6 @@
         "bootstrap-icons": "^1.4.0",
         "classlist.js": "^1.1.20150312",
         "core-js": "^3.9.1",
-        "domino": "^2.1.6",
         "echarts": "^4.9.0",
         "epsg": "^0.5.0",
         "express": "^4.15.2",
@@ -91,6 +90,7 @@
         "@typescript-eslint/eslint-plugin": "^4.16.1",
         "@typescript-eslint/parser": "^4.16.1",
         "codelyzer": "^6.0.1",
+        "domino": "^2.1.6",
         "electron": "^12.0.0",
         "eslint": "^7.21.0",
         "eslint-plugin-import": "^2.22.1",
