--- a/power/package.json
+++ b/power/package.json
@@ -61,7 +61,7 @@
         "sass": "^1.32.8",
         "semver": "^7.3.4",
         "showdown": "^1.9.1",
-        "survey-angular": "1.8.31",
+        "survey-angular": "^1.8.34",
         "tslib": "^2.1.0",
         "web-animations-js": "^2.3.2",
         "zone.js": "^0.11.4"
@@ -81,11 +81,11 @@
         "@schematics/angular": "^11.2.3",
         "@types/express": "^4.17.0",
         "@types/geojson": "^7946.0.7",
-        "@types/jasmine": "^3.6.4",
+        "@types/jasmine": "^3.6.6",
         "@types/jasminewd2": "^2.0.8",
         "@types/lodash": "^4.14.168",
         "@types/mapbox-gl": "^1.13.0",
-        "@types/node": "^14.14.31",
+        "@types/node": "^14.14.32",
         "@types/showdown": "^1.9.3",
         "@typescript-eslint/eslint-plugin": "^4.16.1",
         "@typescript-eslint/parser": "^4.16.1",
@@ -111,8 +111,8 @@
         "postcss": "^8.2.7",
         "protractor": "^7.0.0",
         "resize-observer-polyfill": "^1.5.1",
-        "stylelint": "^13.11.0",
-        "stylelint-config-standard": "^20.0.0",
+        "stylelint": "^13.12.0",
+        "stylelint-config-standard": "^21.0.0",
         "ts-node": "^9.1.1",
         "typescript": "~4.0.7"
     },
