--- a/power/angular.json
+++ b/power/angular.json
@@ -38,6 +38,7 @@
                             "src/favicon.ico",
                             "src/assets",
                             "src/robots.txt",
+                            "src/sitemap.xml",
                             "src/manifest.webmanifest"
                         ],
                         "styles": [
