--- a/nginx-default.conf
+++ b/nginx-default.conf
@@ -1,5 +1,3 @@
-#resolver  127.0.0.11 valid=10s;  # recover from the backend's IP changing
-
 server {
   listen  80;
   root /usr/share/nginx/html;
@@ -30,11 +28,15 @@ server {
   etag on;
 
   location / {
-    try_files $uri $uri/ /index.html;
+    try_files $uri /index.html;
+  }
+
+  location /de-simple/ {
+    try_files $uri /de-simple/index.html;
   }
 
   location /en/ {
-    try_files $uri $uri/ /en/index.html;
+    try_files $uri /en/index.html;
   }
 
   location /health {
