--- a/nginx-default.conf
+++ b/nginx-default.conf
@@ -28,15 +28,15 @@ server {
   etag on;
 
   location / {
-    try_files $uri /index.html;
+    try_files $uri $uri/index.html $uri/ /index.html =404;
   }
 
   location /de-simple/ {
-    try_files $uri /de-simple/index.html;
+    try_files $uri $uri/index.html $uri/ /de-simple/index.html =404;
   }
 
   location /en/ {
-    try_files $uri /en/index.html;
+    try_files $uri $uri/index.html $uri/ /en/index.html =404;
   }
 
   location /health {
