--- a/power/ngsw-config.json
+++ b/power/ngsw-config.json
@@ -8,6 +8,7 @@
                 "files": [
                     "/favicon.ico",
                     "/index.html",
+                    "/**/index.html",
                     "/manifest.webmanifest",
                     "/*.css",
                     "/*.js"
