Disable access log

--- a/nginx-default.conf
+++ b/nginx-default.conf
@@ -1,6 +1,7 @@
 server {
   listen  80;
   root /usr/share/nginx/html;
+  access_log off;
   error_log /var/log/nginx/error.log error;
 
   # compression
