--- a/nginx-default.conf
+++ b/nginx-default.conf
@@ -7,7 +7,7 @@ server {
   # compression
   gzip on;
   gzip_static on;
-  gzip_types application/javascript application/json application/octet-stream image/x-icon text/css text/html;
+  gzip_types application/javascript application/json application/octet-stream image/x-icon text/css;
 
   # security settings
   server_tokens off;
