--- a/nginx-default.conf
+++ b/nginx-default.conf
@@ -16,6 +16,9 @@ server {
   add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-eval'; worker-src 'self' blob:; child-src 'self' blob:; style-src 'unsafe-inline' 'self'; img-src 'self' https: data:; object-src 'none'; connect-src *;" always;
   add_header X-Content-Type-Options "nosniff" always;
   add_header Access-Control-Allow-Origin "*" always;
+  add_header Cross-Origin-Resource-Policy "same-origin" always;
+  add_header Cross-Origin-Opener-Policy "same-origin" always;
+  add_header Cross-Origin-Embedder-Policy "require-corp" always;
   add_header Referrer-Policy "no-referrer" always;
   add_header Expect-CT "max-age=86400, enforce" always;
   add_header Permissions-Policy "geolocation=(self),camera=(),microphone=(),usb=(),payment=(),fullscreen=()" always;
