--- a/nginx-default.conf
+++ b/nginx-default.conf
@@ -13,7 +13,7 @@ server {
   server_tokens off;
   proxy_cookie_path / "/; HTTPOnly; Secure";
   add_header Strict-Transport-Security "max-age=31536000; includeSubdomains;" always;
-  add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-eval'; worker-src 'self' blob:; child-src 'self' blob:; style-src 'unsafe-inline' 'self'; img-src 'self' https: data:; object-src 'none'; connect-src *;" always;
+  add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-eval'; style-src 'unsafe-inline' 'self'; img-src 'self' https: data:; object-src 'none'; child-src 'self' blob:; worker-src 'self' blob:; base-uri 'self'; form-action 'self'; frame-ancestors 'self'; connect-src *;" always;
   add_header X-Content-Type-Options "nosniff" always;
   add_header Access-Control-Allow-Origin "*" always;
   add_header Cross-Origin-Resource-Policy "same-origin" always;
