Added network policy

--- a/chart/power/values-production.yaml
+++ b/chart/power/values-production.yaml
@@ -95,3 +95,13 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
+
+networkPolicy:
+  enabled: true
+  extraFrom:
+    - namespaceSelector:
+        matchLabels:
+          name: kong
+      podSelector:
+        matchLabels:
+          app.kubernetes.io/name: kong
