--- a/chart/power/values-staging.yaml
+++ b/chart/power/values-staging.yaml
@@ -81,3 +81,13 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
+
+networkPolicy:
+  enabled: true
+  extraFrom:
+    - namespaceSelector:
+        matchLabels:
+          name: kong
+      podSelector:
+        matchLabels:
+          app.kubernetes.io/name: kong
