--- a/chart/power/values-dev.yaml
+++ b/chart/power/values-dev.yaml
@@ -84,7 +84,7 @@ affinity: {}
 
 networkPolicy:
   enabled: true
-  extraFrom:
+  from:
     - namespaceSelector:
         matchLabels:
           name: kong
