--- a/chart/power/templates/service.yaml
+++ b/chart/power/templates/service.yaml
@@ -4,6 +4,10 @@ metadata:
   name: {{ include "power.fullname" . }}
   labels:
     {{- include "power.labels" . | nindent 4 }}
+  {{- with .Values.service.annotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 spec:
   type: {{ .Values.service.type }}
   ports:
