--- a/chart/power/templates/networkpolicy.yaml
+++ b/chart/power/templates/networkpolicy.yaml
@@ -22,3 +22,16 @@ spec:
     {{- end }}
   {{- end }}
 {{- end }}
+
+---
+
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+  name: default-deny-ingress
+  labels:
+    {{- include "power.labels" . | nindent 4 }}
+spec:
+  podSelector: {}
+  policyTypes:
+  - Ingress
