Fix SSR not working correctly

--- a/power/angular.json
+++ b/power/angular.json
@@ -282,6 +282,11 @@
                             "/login",
                             "/logout",
                             "/feedback",
+                            "/bodenrichtwerte",
+                            "/bodenwertkalkulator",
+                            "/grundstuecksmarktberichte",
+                            "/landesgrundstuecksmarktberichte",
+                            "/immobilienpreisindex",
                             "/forms",
                             "/forms/public-dashboard"
                         ]
