--- a/power/package.json
+++ b/power/package.json
@@ -91,6 +91,7 @@
         "@typescript-eslint/eslint-plugin": "^4.19.0",
         "@typescript-eslint/parser": "^4.19.0",
         "codelyzer": "^6.0.1",
+        "create-object-url": "^1.0.2",
         "domino": "^2.1.6",
         "electron": "^12.0.2",
         "eslint": "^7.21.0",
@@ -109,6 +110,7 @@
         "karma-jasmine": "^4.0.1",
         "karma-jasmine-html-reporter": "^1.5.0",
         "karma-junit-reporter": "^2.0.1",
+        "node-blob": "^0.0.2",
         "postcss": "^8.2.8",
         "protractor": "^7.0.0",
         "resize-observer-polyfill": "^1.5.1",
