--- a/power/angular.json
+++ b/power/angular.json
@@ -283,6 +283,8 @@
                             "/logout",
                             "/feedback",
                             "/bodenrichtwerte",
+                            "/grundstuecksmarktberichte",
+                            "/landesgrundstuecksmarktberichte",
                             "/forms",
                             "/forms/public-dashboard"
                         ]
