Make NIPIX compatible with SSR

--- a/power/angular.json
+++ b/power/angular.json
@@ -285,6 +285,7 @@
                             "/bodenrichtwerte",
                             "/grundstuecksmarktberichte",
                             "/landesgrundstuecksmarktberichte",
+                            "/immobilienpreisindex",
                             "/forms",
                             "/forms/public-dashboard"
                         ]
