--- a/chart/power/templates/deployment.yaml
+++ b/chart/power/templates/deployment.yaml
@@ -37,21 +37,30 @@ spec:
       serviceAccountName: {{ include "power.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
-      containers:
-        - name: {{ .Chart.Name }}
-          securityContext:
-            {{- toYaml .Values.securityContext | nindent 12 }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-          imagePullPolicy: {{ .Values.image.pullPolicy }}
+      initContainers:
+        - name: config
+          image: busybox
+          command: ["/bin/sh", "-c", "base64 -d /config/power.conf | sed --expression=\"s#\\${BKG_GEOCODING_SECRET}#${BKG_GEOCODING_SECRET}#g\" > /opt/bitnami/nginx/conf/server_blocks/power.conf"]
+          volumeMounts:
+            - name: tmp-config
+              mountPath: /opt/bitnami/nginx/conf/server_blocks/
+            - name: nginxconf
+              mountPath: /config/
           env:
             - name: BKG_GEOCODING_SECRET
               valueFrom:
                 secretKeyRef:
                   name: power-secret
                   key: BKG_GEOCODING_SECRET
+      containers:
+        - name: {{ .Chart.Name }}
+          securityContext:
+            {{- toYaml .Values.containerSecurityContext | nindent 12 }}
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
-              containerPort: 80
+              containerPort: 8081
               protocol: TCP
           livenessProbe:
             httpGet:
@@ -63,6 +72,15 @@ spec:
               port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+          volumeMounts:
+            - name: tmp-config
+              mountPath: /opt/bitnami/nginx/conf/server_blocks
+      volumes:
+        - name: nginxconf
+          configMap:
+            name: {{ include "power.fullname" . }}-nginx
+        - name: tmp-config
+          emptyDir: {}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
