--- a/chart/power/power.conf
+++ b/chart/power/power.conf
@@ -1,8 +1,7 @@
 server {
-  listen  80;
-  root /usr/share/nginx/html;
+  listen 8081;
+  root /app;
   access_log off;
-  error_log /var/log/nginx/error.log error;
 
   # compression
   gzip on;
