--- a/chart/power/values-staging.yaml
+++ b/chart/power/values-staging.yaml
@@ -89,3 +89,19 @@ networkPolicy:
       podSelector:
         matchLabels:
           app.kubernetes.io/name: kong
+
+metrics:
+  enabled: true
+  image:
+    registry: docker.io
+    repository: bitnami/nginx-exporter
+    tag: 0.8.0-debian-10-r259
+    pullPolicy: IfNotPresent
+  podAnnotations: {}
+  service:
+    port: 9113
+  resources:
+    limits: {}
+    requests: {}
+  serviceMonitor:
+    enabled: true
