ReadOnlyFS not working

--- a/chart/power/values-dev.yaml
+++ b/chart/power/values-dev.yaml
@@ -35,6 +35,7 @@ podSecurityContext:
 containerSecurityContext:
   runAsUser: 1001
   runAsNonRoot: true
+  readOnlyRootFilesystem: false
 
 service:
   type: ClusterIP
