--- a/chart/power/values-staging.yaml
+++ b/chart/power/values-staging.yaml
@@ -35,7 +35,7 @@ podSecurityContext:
 containerSecurityContext:
   runAsUser: 1001
   runAsNonRoot: true
-  readOnlyRootFilesystem: false
+  readOnlyRootFilesystem: true
 
 service:
   type: ClusterIP
